--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,15 @@
 .logo {
-  width: 40px;
+  width: 60px;
   display: inline-block;
-  margin: 0 20px 0 0;
+  margin: 0 10px 0 0;
+}
+
+.appBar {
+  padding: 18px 25px;
+  margin-bottom: 10px;
+  background-color: #23292e;
+  color: #efefef;
+
+  display: flex;
+  justify-content: flex-start;
 }
